Added iban placeholder, weergave_naam and moved database to core in service
