# huishoudboekje-service/core/views/burgers.py
@@ -5,7 +5,7 @@ from flask_inputs import Inputs
 from flask_inputs.validators import JsonSchema
 from models.gebruiker import get_gebruiker
 from models.burger import Burger
-from database.database import db
+from core.database import db
 
 new_burger_schema = {
     "type": "object",
@@ -32,15 +32,7 @@ new_burger_schema = {
             "type": "string",
         },
     },
-    "required": [
-        "voornamen",
-        "voorletters",
-        "achternaam",
-        "straatnaam",
-        "huisnummer",
-        "postcode",
-        "woonplaatsnaam"
-    ]
+    "required": []
 }
 
 edit_burger_schema = new_burger_schema.copy()
@@ -67,33 +59,21 @@ class BurgerView(MethodView):
     def post(self, gebruiker_id):
         """ Create and return a new Burger for the current Gebruiker """
         gebruiker = get_gebruiker(gebruiker_id)
-        if gebruiker.burger:
-            return {"errors": ["The current Gebruiker already has a Burger"]}, 409
-
-        inputs = NewBurgerInputs(request)
-        if not inputs.validate():
-            return {"errors": inputs.errors}, 400
-
-        burger = Burger()
-        burger.gebruiker = gebruiker
-        for key, value in request.json.items():
-            setattr(burger, key, value)
-        db.session.add(burger)
-        db.session.commit()
-        return {"data": gebruiker.burger.to_dict()}, 200
-
-    def patch(self, gebruiker_id):
-        """ Create and return a new Burger for the current Gebruiker """
-        gebruiker = get_gebruiker(gebruiker_id)
         if not gebruiker.burger:
-            return {"errors": ["The current Gebruiker does not have a Burger"]}, 404
+            burger = Burger()
+            burger.gebruiker = gebruiker
+            db.session.add(burger)
+            db.session.flush()
+        else:
+            burger = gebruiker.burger
 
         inputs = EditBurgerInputs(request)
         if not inputs.validate():
             return {"errors": inputs.errors}, 400
 
         for key, value in request.json.items():
-            setattr(gebruiker.burger, key, value)
+            setattr(burger, key, value)
+        gebruiker.weergave_naam = f"{burger.voornamen} {burger.achternaam}"
         db.session.commit()
         return {"data": gebruiker.burger.to_dict()}, 200
 
